--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,10 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  posts:
+    create:
+      success: 'Post was successfully created.'
+    update:
+      success: 'Post was successfully updated.'
+    destroy:
+      success: 'Post was successfully destroyed.'
